[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = "My code for Advent of Code 2022 using python"
authors = ["Jonas Renault <jonasrenault@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
tqdm = "^4.64.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.5.1"
jupytext = "^1.14.4"
black = "^22.12.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
