[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = "Repository for my code for Advent of Code 2022"
authors = ["Jonas Renault <jonasrenault@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jonasrenault/advent2022#readme"
repository = "https://github.com/jonasrenault/advent2022"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
requests = "^2.31.0"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
ruff = "^0.2.2"
mypy = "^1.8.0"
bandit = "^1.7.7"
docformatter = "^1.7.5"
types-requests = "^2.31.0.20240218"
click = "^8.1.7"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 90
target_version = ['py310']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "templates",
]
lint.ignore = []
line-length = 90
lint.select = [
    "E",
    "F",
    "W",
    "I001",
]
src = ["advent2022", "tests"]

[mypy]
files = ["advent2022"]
exclude = ["templates"]
